--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "Javascript Development Environment",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+		"prestart": "node buildScripts/startMessage.js",
+		"start": "npm-run-all --parallel security-check open:src",
+		"open:src": "node buildScripts/srcServer.js",
+		"security-check": "nsp check",
+		"localtunnel": "lt --port 3000",
+		"share": "npm-run-all --parallel open:src localtunnel"
+	},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/prakashvgr/js-dev-env.git"
