--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
 		"prestart": "babel-node buildScripts/startMessage.js",
-		"start": "npm-run-all --parallel security-check open:src lint:watch",
+		"start": "npm-run-all --parallel security-check open:src lint:watch test:watch",
 		"open:src": "babel-node buildScripts/srcServer.js",
 		"lint": "esw webpack.config.* src buildScripts --color",
 		"lint:watch": "npm run lint -- --watch",
+		"test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
+		"test:watch": "npm run test -- --watch",
 		"security-check": "nsp check",
 		"localtunnel": "lt --port 3000",
 		"share": "npm-run-all --parallel open:src localtunnel"
