--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
 		"prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel open:src lint:watch test:watch",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch start-mockapi",
 		"open:src": "babel-node buildScripts/srcServer.js",
 		"lint": "esw webpack.config.* src buildScripts --color",
 		"lint:watch": "npm run lint -- --watch",
@@ -13,7 +13,10 @@
 		"test:watch": "npm run test -- --watch",
 		"security-check": "nsp check",
 		"localtunnel": "lt --port 3000",
-		"share": "npm-run-all --parallel open:src localtunnel"
+		"share": "npm-run-all --parallel open:src localtunnel",
+    "generate-mock-data": "babel-node buildScripts/generateMockData.js",
+    "prestart-mockapi": "npm run generate-mock-data",
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001"
 	},
   "repository": {
     "type": "git",
